--- a/index.html
+++ b/index.html
@@ -223,30 +223,32 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Contact Us!</h2>
-          <h5>Send us a message</h5>
           <form action="/action_page.php">
-            <!-- <label for="fname">Full Name:</label><br /> -->
-            <input type="text" id="fname" name="fname" value="Full Name" /><br />
-            <br />
-            <!-- <label for="lname">Your Email:</label><br /> -->
-            <input type="email" id="email" name="email" value="Your Email" /><br /><br />
-            <textarea id="w3review" name="w3review" rows="4" cols="50">
-  Intent Intent Intent Intent Intent.</textarea>
-            <br />
-            <br />
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Name</label>
+              <input class="form-control" type="text" id="fname" name="fname" placeholder="Full Name" />
+
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <input class="form-control" type="email" id="email" name="email" placeholder="name@example.com" />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Message</label>
+              <textarea class="form-control" name="w3review" rows="4" cols="50" placeholder="Your message"></textarea>
+            </div>
             <input type="submit" value="Submit" />
           </form>
         </div>
         <div class="col-md-4">
           <h2>Site map</h2>
-          <p>All our pages</p>
-          <ol>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
-          </ol>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="/index.html">Home</a></li>
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="/about.html">About</a></li>
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="/services.html">Services</a></li>
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#">Pricing</a></li>
+            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#">Contact</a></li>
+          </ul>
         </div>
         <div class="col-md-4">
           <img src="./images/intentedu.png" alt="logo" class="responsive" style="width: 50%" />
@@ -264,11 +266,12 @@
   </div>
   <div class="copyright-section">
     <div class="container">
-      <p id="copyright">&copy; 2023 by Intent. All rights reserved.</p>
+      <p id="copyright" class="text-center">&copy; 2023 by Intent. All rights reserved.</p>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
